# screen-analytics

./: .env.example  .gitignore  CLAUDE.md  README.md  index.html  package.json  rsbuild.config.ts  tsconfig.json
agent_docs/: architecture.md  notion-schema.md  openai-prompts.md  tauri-commands.md
src/: App.tsx  env.d.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  log_util.rs  main.rs  scheduler.rs  screenshot.rs
src/components/: ActivityDrawer.tsx  DailyReport.tsx  ErrorBanner.tsx  SnapshotCard.tsx  Timeline.tsx
src/hooks/: useTimeline.ts
src/lib/: activityLog.ts  errors.ts  notion.ts  openai.ts  sounds.ts  storage.ts
src/theme/: mantine-theme.ts
src/types/: index.ts
